--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/userdetails.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/userdetails.xml
@@ -5,29 +5,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="5dp">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal" >
+        android:orientation="vertical"
+        android:layout_marginTop="10dp">
         <com.facebook.login.widget.ProfilePictureView
             android:id="@+id/userProfilePicture"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            facebook:com_facebook_preset_size="small" />
+            facebook:com_facebook_preset_size="normal" />
         <TextView
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_gravity="center"
             android:textColor="#333"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            />
+
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ratingBar"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
+
+
 
     <TableLayout
         android:layout_width="match_parent"
@@ -41,7 +47,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_gravity="right"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:text="@string/gender" />
@@ -54,21 +59,10 @@
                 android:textSize="16sp" />
         </TableRow>
         <TableRow>
-            <View
-                android:layout_span="2"
-                android:layout_width="wrap_content"
-                android:layout_height="0.5dp"
-                android:layout_weight="1"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:background="#999" />
-        </TableRow>
-        <TableRow>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_gravity="right"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:text="@string/email" />
