--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/trip_detail.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/trip_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/sv_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -250,24 +251,21 @@
                 </TableRow>
             </TableLayout>
         </LinearLayout>
-        <FrameLayout
+        <fragment
+            android:id="@+id/map"
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginTop="10dp">
-            <fragment
-                android:id="@+id/map"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/atv_places"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" >
+            android:layout_marginTop="10dp"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/atv_places"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            class="com.parse.carpool.WorkaroundMapFragment">
 
-            </fragment>
+        </fragment>
 
-        </FrameLayout>
 
         <TableLayout
             android:layout_width="match_parent"
