TripDetail>>>>> Add icon link (to phone and facebook) Home>>>>>>>>Show trip's creator name

--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/trip_detail.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/trip_detail.xml
@@ -62,10 +62,12 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:id="@+id/icnPhone"
                             android:src="@drawable/ic_phone"/>
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:id="@+id/icnFacebook"
                             android:src="@drawable/ic_facebook"/>
 
                     </LinearLayout>
