--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/home.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/home.xml
@@ -38,6 +38,9 @@
                 android:layout_height="wrap_content"
                 android:text="Show your activities"
                 android:id="@+id/showActBtn"/>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent">
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -47,6 +50,8 @@
                 android:divider="#CCCCCC"
                 android:dividerHeight="1dp">
             </ListView>
+        </ScrollView>
+
 
     </LinearLayout>
 
