--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/listview.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/listview.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/name"
                 android:text="Peerapon"
+                android:singleLine="true"
                 android:textStyle="bold"
                 android:textSize="20sp" />
             <LinearLayout
