--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/home.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/home.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:facebook="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +30,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginTop="20dp"
         android:padding="5dp">
@@ -38,9 +39,10 @@
                 android:layout_height="wrap_content"
                 android:text="Show your activities"
                 android:id="@+id/showActBtn"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent">
+        <!--<ScrollView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1">-->
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,9 +50,10 @@
                 android:background="@android:color/transparent"
                 android:cacheColorHint="@android:color/transparent"
                 android:divider="#CCCCCC"
-                android:dividerHeight="1dp">
+                android:dividerHeight="1dp"
+                tools:listitem="@layout/listview">
             </ListView>
-        </ScrollView>
+        <!--</ScrollView>-->
 
 
     </LinearLayout>
