--- a/CarpoolTH/IntegratingFacebookTutorial/res/layout/activity_map.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/res/layout/activity_map.xml
@@ -32,6 +32,22 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/route1"
+                android:text="1"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/route2"
+                android:text="2"/>
+        </LinearLayout>
     </LinearLayout>
 
     <FrameLayout
@@ -49,6 +65,7 @@
             android:layout_alignParentEnd="true" >
 
         </fragment>
+
 
         <Button
             android:layout_width="match_parent"
